<resources>
    <string name="app_name">FishApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">Map</string>
    <string name="fishname">Fish Species</string>
    <string name="about">‘FishFarms in Cavite’ is an application which helps inform the user about aquaculture and track suitable local fish farm spots in Cavite. \n \n
Here’s what you can do with ‘FishFarms in Cavite’ Application: \n \n
• Learn about aquaculture: Common Species, Tools and Equipments, Fish Feeds, Culturing Methods, History of Aquaculture, Aquaculture Rules and Ethics. \n \n
•Find Local fish farms in Cavite (To protect fish farm owners’ privacy, each places in the map is an approximation.) \n \n
•Get information about Local fish farms in Cavite. \n
</string>
    <string name="aboutus"><b>Jan Ashley B. Mayrina</b> (Developer) \n
        <b>Rhea Jane S. Tardio</b> (Co-developer)
    </string>
    <string name="descript"><b>Common Name: Milkfish \n
Local name: Bangus, Awa \n
Max Size: 180cm (Commonly 60-100cm) \n
Biodiversity: Marine, Brackish, Freshwater, Benthopelagic, Endemic \n
        Fishing Season:  All Year Long</b>
</string>
    <string name="tilapiadesc"><b>Common Name: Tilapia \n
Local Name: Pla-pla (Tagalog), Tilapia (Cebuano)\n
Max Size:  60 cm \n
Biodiversity: Marine, Brackish, Freshwater \n
Depth: 0 – 6 meters \n
        Fishing Season:  All Year Long</b>
        </string>
    <string name="tilapiadesc2">\n Nile tilapia is a tropical species that prefers to live in shallow water. The lower and upper lethal temperatures for Nile tilapia are 11-12 °C and 42 °C, respectively, while the preferred temperature ranges from 31 to 36 °C. It is an omnivorous grazer that feeds on phytoplankton, periphyton, aquatic plants, small invertebrates, benthic fauna, detritus and bacterial films associated with detritus. Nile tilapia can filter feed by entrapping suspended particles, including phytoplankton and bacteria, on mucous in the buccal cavity, although its main source of nutrition is obtained by surface grazing on periphyton mats. </string>
    <string name="history">Students of aquaculture have advanced various theories on how aqua-culture started. It is noted that all these versions could really be factual but are perhaps applicable in different areas of the world where aquaculture may have started independently from each other. It is only within recent period when means of communication and transportation and exchanges beyond continental and national boundaries were possible that aquaculture development has become unified, intensified and in some cases, integrated.
\n \n Examination of available literature on aquaculture history shows that there are at least 4 theories that may explain the beginnings of aquaculture. These are described in the following paragraphs.
</string>
    <string name="history1">This version on the origin of aquaculture relates the beginnings of this industry to existing natural rivers and streams especially in inland areas. These rivers, in the course of time, develop curves and oxbows which, due to natural topography and physiography of the area, may farther result into long, winding oxbows of varying sizes. As time went on, under varying flood levels that occurred in different years such rivers may have changed their courses, leaving behind the formed oxbows together with the fish and other living organisms in them. Human population along the rivers, who by adaptation are natural fishermen, discovered a good harvest of fish could be derived from these naturally formed oxbows. It was also found that seasonal flooding of these water areas restocked them with fish which again could be harvestable during the ensuing dry season. Taking full advantage of this occurrence, enterprising individuals in the surrounding communities would begin to improve the embankments, enclosing such oxbow areas. Subsequently, in addition to the seasonal natural stock of fish that enter the modified oxbows, additional stock may be planted, thus starting aquaculture management in them. This continued on till complete aquaculture management was attained. Development of this nature is exemplified by extensive low-lying level areas with a network of rivers and a distinct monsoonal, annual rainy and dry period. Bangladesh may be a good example of this type of terrain.</string>
    <string name="history2">Fish and other aquatic products have always been held in high esteem by the early rulers of big empires. At the same time, it was a practice to build water areas as source of water, recreation, or a means of defense around castles. Such water areas were not really intended for rearing fish but some of the rulers demanded fish, regardless of the season so that the responsible officers around these rulers had to provide means to obtain fish even during winter. Due to this necessity, the practice has developed to stock fish caught from natural waters into the water areas constructed around castles or communities. As it turned out, some of the fish planted in these artificial waters were able to survive and grow while others perished. In the course of time, the species that survived and grow such as the common carp were selected for this catch-and-hold system of providing fish. As a further development, stocking of the right amount and kind of fish and feeding them when necessary also developed resulting in actual aquaculture practice. The monasteries of Europe and the palaces of emperors and other rulers exemplified this type of venue for aquaculture development.</string>
    <string name="history3">Many tropical areas of the world are affected by monsoons, one bringing strong rains with some floods and the other the dry season. During the rainy system, the rivers which provided the waterways get swollen and if the watershed was extensive, wide-level lowland places were likewise flooded. Extensive marshlands rich in vegetation and aquatic organisms, including fish, provided wide and favourable habitat for growth and reproduction during the flood season of the year. When the rainy season decreases until it finally stops, the water in these floodlands also gradually receded. As the dry season progressed, the water further receded, draining almost all the flood plains but leaving only spots of deep areas and the rivers with water. These resulted in the concentration of the fish that have grown and reproduced during the wet season into the watered depressions or back into the rivers. Fishermen from the surrounding communities catch fish from these concentrated depressions. At the beginning, most of the fish were caught without regard to size or kind. Later on, the small ones were left behind or gathered and transferred to other rearing areas. If suitable, some of these depressions would be provided with embankments in which culture of suitable fish stock in them was conducted, thus starting aquaculture management which began through the concentration version. The low level extensive plains in the African continent exemplified the environment suitable for this type of management. As a matter of fact, the prevailing practice which could be described mainly as capture fisheries but with some element of culture management have been in existence in such areas.</string>
    <string name="history4">While the first three versions have been observed as developments from inland freshwater areas, this fourth development is characteristic of brackish and marine areas affected by tidal fluctuations. Coastal areas usually abound with coves, lagoons, permanent ponds, enclosed swamps or even depressions which were periodically watered and fully or partially drained during ordinary or extreme low tides. The population along these coastal communities or owners or leassors of tidal lands with these types of water areas have long realized that these areas were regularly stocked with fin-fish, crustaceans and even mollusks and other aquatic economic resources naturally found in these waters. With this knowledge, they started to install traps that would block the exit of these fish and crustaceans that may have entered the water area during a flood tide. A fisherman realized that by this management, he could be regularly provided with fish for his table and some extra for the market. As time developed, however, and as more fishermen fish in the surrounding waters, the amount trapped in these water areas declined. Therefore, instead of harvesting at each periodic tide fluctuations, the barricade to the watered area was kept in place for some time, say, one to three months before the fish that have entered have grown to good size. Thus starting a primitive form of aquaculture. Later on, actual aquaculture management was developed consisting of providing the necessary dikes for the watered area, excavating and levelling the area to provide more space and stocking additional finfish or crustacean seeds to augment the trapped fish and crustaceans brought in by the tide. This chronology of development was what actually happened in the development of brackish water aquaculture which probably began in Indonesia and spread to the Philippines, and later into Thailand, Malaysia, India and other areas in the world.</string>
    <string name="method1">The first method is the cage system which uses cages that are placed in lakes, ponds and oceans that contain the fish. This method is also widely referred to as off-shore cultivation. Fish are kept in the cage like structures and are “artificially fed” and harvested. The fish farming cage method has made numerous technological advances over the years, especially with reducing diseases and environmental concerns. However, the number one concern of the cage method is fish escaping and being loose among the wild fish population.</string>
    <string name="method2">The second method is irrigation ditch or pond systems for raising fish. This basic requirement for this method is to have a ditch or a pond that holds water. This is a unique system because at a small level, fish are artificially fed and the waste produced from the fish is then used to fertilize farmers’ fields. On a larger scale, mostly in ponds, the pond is self-sustaining as it grows plants and algae for fish food. </string>
    <string name="method3">The third method of fish farming is called composite fish culture which is a type of fish farming that allows both local fish species and imported fish species to coexist in the same pond. The number of species depends, but it is sometimes upwards of six fish species in a single pond. The fish species are always carefully chosen to ensure that species can coexist and reduce competition for food.</string>
    <string name="method4">The fourth method of fish farming is called integrated recycling systems which is considered the largest scale method of “pure” fish farming. This approach uses large plastic tanks that are placed inside a greenhouse. There are hydroponic beds that are placed near the plastic tanks. The water in the plastic tanks is circulated to the hydroponic beds, where the fish feed waste goes to provide nutrients to the plant crops that are grown in the hydroponic beds. The majority of types of plants that are grown in the hydroponic beds are herbs such as parsley and basil.</string>
    <string name="method5">The last type of fish farming method is called classic fry farming this method is also known as “flow through system”. This is when sport fish species are raised from eggs and are put in streams and released.
\n \n There are a number of different fish species that are raised on fish farms, the most common fish species globally raised are salmon, carp, tilapia, catfish and cod.
</string>
</resources>